libs/plugins/core/src/snapshots/plugins_core__looking__tests__it_looks_at_entities.snap
---
source: libs/plugins/core/src/looking.rs
expression: reply.to_json()?
---
{
  "entityObservation": {
    "entity": {
      "desc": null,
      "key": "E-0",
      "name": "Hammer",
      "qualified": "a Hammer"
    }
  }
}
