libs/plugins/core/src/snapshots/plugins_core__looking__tests__it_looks_in_area_with_items_on_ground_and_holding_items.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "areaObservation": {
    "area": {
      "desc": null,
      "key": "E-4",
      "name": "Welcome Area",
      "qualified": "a Welcome Area"
    },
    "carrying": [
      {
        "desc": null,
        "key": "E-3",
        "name": "Cool Rake",
        "qualified": "a Cool Rake"
      }
    ],
    "items": [
      {
        "desc": null,
        "key": "E-5",
        "name": "Boring Shovel",
        "qualified": "a Boring Shovel"
      },
      {
        "desc": null,
        "key": "E-6",
        "name": "East Exit",
        "qualified": "an East Exit"
      }
    ],
    "living": [
      {
        "desc": null,
        "key": "E-2",
        "name": "Living",
        "qualified": "a Living"
      }
    ],
    "person": {
      "desc": null,
      "key": "E-2",
      "name": "Living",
      "qualified": "a Living"
    },
    "routes": []
  }
}
