libs/plugins/core/src/snapshots/plugins_core__looking__tests__it_looks_in_empty_area.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "areaObservation": {
    "area": {
      "desc": null,
      "key": "E-2",
      "name": "Welcome Area",
      "qualified": "a Welcome Area"
    },
    "carrying": [],
    "items": [],
    "living": [
      {
        "desc": null,
        "key": "E-1",
        "name": "Living",
        "qualified": "a Living"
      }
    ],
    "person": {
      "desc": null,
      "key": "E-1",
      "name": "Living",
      "qualified": "a Living"
    },
    "routes": []
  }
}
