libs/plugins/core/src/snapshots/plugins_core__looking__tests__it_looks_inside_containers.snap
---
source: src/plugins/looking.rs
expression: reply.to_json()?
---
{
  "insideObservation": {
    "items": [
      {
        "desc": null,
        "key": "E-1",
        "name": "Key",
        "qualified": "a Key"
      }
    ],
    "vessel": {
      "desc": null,
      "key": "E-0",
      "name": "Vessel",
      "qualified": "a Vessel"
    }
  }
}
